--- a/style.css
+++ b/style.css
@@ -1,13 +1,77 @@
-h1 {
-    color: purple;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-p {
-    border: 2px solid black;
+header {
+    background-color: grey;
+    color: white;
+    text-align: center;
+    padding: 20px;
+}
+nav {
+    background-color: #2980b9;
     padding: 10px;
-    
+
+}
+nav ul {
+    list-style-type: none;
+    display: flex;
+    justify-content: center;
+}
+nav ul li {
+    margin: 0 15px;
+}
+nav ul li a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+}
+nav ul li a:hover {
+    color: #fc0707;
+
+}
+main {
+    padding: 20px;
+    max-width: 800px;
+    margin: 0 auto;
+    font-size: 16px;
+    line-height: 1.6;
+}
+main section h3 {
+    margin-bottom: 20p;
+    color: #2c3e50 ;
+    font-size: large;
+}
+main section p {
+    margin-bottom: 10px;
+}
+footer {
+    background-color: #34495e;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 
-img {
-    width: 300px;
-    height: auto;
+@media screen and (max-windth: 600px) {
+    nav ul {
+        flex-direction: column;
+    }
+    nav ul li {
+        margin: 10px 0;
+    }
+    main {
+        padding: 10px;
+        font-size: 14px;
+    }
+    header {
+        padding: 10px;
+    }
+    footer {
+        position: static;
+    }
+    
 }
